--- a/.github/workflows/pyinstaller-linux.yml
+++ b/.github/workflows/pyinstaller-linux.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: linux_qa
-          path: dist/qa.exe
+          path: dist/qa
 
       - name: create release
         id: create_release
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GTOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/qa.exe
-          asset_name: qa-Windows-amd64.exe
+          asset_path: dist/qa
+          asset_name: qa-linux
           asset_content_type: application/zip
