--- a/.github/workflows/pyinstaller-linux.yml
+++ b/.github/workflows/pyinstaller-linux.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.11'
-          architecture: 'amd64'
+          architecture: 'x64'
       - name: Install requirements
         run: |
           pip install -r src/requirements.txt
