--- a/.github/workflows/pyinstaller-windows.yml
+++ b/.github/workflows/pyinstaller-windows.yml
@@ -31,11 +31,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GTOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: Windows ${{ github.ref }}
+          release_name: Windows Release ${{ github.ref }}
           overwrite: true
           body: |
-            Test Release v1.0.0
+            Windows Release ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
@@ -46,5 +46,5 @@ jobs:
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
           asset_path: dist/qa.exe
-          asset_name: qa-Windows-amd64.exe
+          asset_name: qa-windows-amd64.exe
           asset_content_type: application/zip
