--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,9 @@ jobs:
         include:
           - os: macos-latest
             TARGET: macos
-            CMD_BUILD: >
-                python -m PyInstaller src/qa.spec
-                cd dist/ &&
-                zip -r9 qa qa.app/                
+            CMD_BUILD: >                
+           	python -m PyInstaller src/qa.spec
+                zip -r9 qa src/dist/                
             OUT_FILE_NAME: qa_mac.zip
             ASSET_MIME: application/zip
           - os: windows-latest
