--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
             CMD_BUILD: >            
                 python -m PyInstaller src/qa.spec &&
                 cd dist/ &&
-                zip -r9 qa ./                
+                zip -r qa_mac.zip ./                
             OUT_FILE_NAME: qa_mac.zip
             ASSET_MIME: application/zip
           - os: windows-latest
